| Summary: | ASTERISK-30344: ari: Memory leak in create when specifying JSON | ||
| Reporter: | Saken (saken-tsk) | Labels: | patch |
| Date Opened: | 2022-12-08 04:16:26.000-0600 | Date Closed: | 2022-12-08 11:22:52.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 18.11.3 18.15.1 20.0.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Red Hat Enterprise Linux 8.5 jansson-2.14-1.el8.x86_64 | Attachments: | ( 0) ASTERISK-30344.diff |
| Description: | To make calls, we use ARI requests with Content-Type: application/json
Memory leaks when creating a channel with variables. We tried 18.11.3 and latest 18.15.1 and 20.0.1 and all these versions are affected. Steps to reproduce: 1. Run asterisk with MALLOC_DEBUG 2. Check memory allocation in json asterisk -rx 'memory show summary' | grep json.c 3. Create a channel through postman Example POST request with Body in JSON format: http://asteriskhost:8088/ari/channels/create?endpoint=PJSIP%2F8707398****%40cusp&app=test&channelId=26&api_key=asterisk:asterisk { "variables": { "CHANNEL(hangup_handler_push)": "hdlr1,s,1", "callid": "38", "callbackdatetime": "2022-12-07 17:19:00", "priority": "priority", "phone": "8707398****", "clientid": "clientid", "agreementid": "agreementid", "CONNECTEDLINE(num)": "9013****", "linetype": "Outbound", "skillgroupnumber": "skillgroupnumber", "sourcesystem": " ", "mode": "auto", "camptype": "auto"} } 4. Check memory allocation in json after creating channel asterisk -rx 'memory show summary' | grep json.c | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-12-08 04:16:30.427-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2022-12-08 04:32:50.907-0600 Please try this attached patch. By: Friendly Automation (friendly-automation) 2022-12-08 11:22:53.336-0600 Change 19671 merged by Friendly Automation: ari: Destroy body variables in channel create. [https://gerrit.asterisk.org/c/asterisk/+/19671|https://gerrit.asterisk.org/c/asterisk/+/19671] By: Friendly Automation (friendly-automation) 2022-12-08 11:24:46.553-0600 Change 19656 merged by Friendly Automation: ari: Destroy body variables in channel create. [https://gerrit.asterisk.org/c/asterisk/+/19656|https://gerrit.asterisk.org/c/asterisk/+/19656] By: Friendly Automation (friendly-automation) 2022-12-09 06:49:00.382-0600 Change 19670 merged by George Joseph: ari: Destroy body variables in channel create. [https://gerrit.asterisk.org/c/asterisk/+/19670|https://gerrit.asterisk.org/c/asterisk/+/19670] | ||